# 032-multi-agent-rl

./: README.md  README.ru.md  readme.simple.ru.md
rust_marl_trading/: Cargo.toml
rust_marl_trading/src/: lib.rs
rust_marl_trading/src/agents/: base.rs  informed.rs  market_maker.rs  mean_reversion.rs  mod.rs  noise_trader.rs  rl_agent.rs  trend_following.rs
rust_marl_trading/src/algorithms/: config.rs  independent.rs  mod.rs  population.rs  self_play.rs
rust_marl_trading/src/api/: client.rs  mod.rs  types.rs
rust_marl_trading/src/environment/: config.rs  env.rs  mod.rs  observation.rs  result.rs
rust_marl_trading/src/orderbook/: book.rs  matching.rs  mod.rs  order.rs
rust_marl_trading/src/utils/: metrics.rs  mod.rs
